import { Profile } from './profile.interface';

export interface User {
    profile: Profile;
}
