@startuml supabase

skinparam Linetype ortho

package Database {
    entity profiles {
        id: uuid <<PK>> <<FK>>
        --
        created_at: timestamp
        username: text
        full_name: text
        avatar: text
        role: text
    }

    entity chats {
        id: uuid <<PK>>
        --
        created_at: timestamp
        last_message_at: timestamp
    }

    entity chat_user {
        chat_id: uuid <<PK>> <<FK>>
        user_id: uuid <<PK>> <<FK>>
        --
        created_at: timestamp
    }

    entity messages {
        id: uuid <<PK>>
        --
        created_at: timestamp
        chat_id: uuid <<FK>>
        user_id: uuid <<FK>>
        content: text
        type: text
    }

    entity profiles_with_total_messages <<view>> {}

    chats ||..o{ messages
    profiles ||..o{ chat_user
    chats ||..o{ chat_user
    profiles ||..|| profiles_with_total_messages

}

package Authentication {
    class Users {
        Email
        Provider
        Created
        Last Sign In
        User UID
    }

    Users ||..|| profiles
}

package Storage {
    circle AvatarsBucket

    circle ChatsBucket
}

AvatarsBucket <-- profiles
ChatsBucket <-- messages

@enduml